--- a/delete-ws.html
+++ b/delete-ws.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Workspace Manager</title>
+    <title>Delete - Workspace Manager</title>
     <meta http-equiv="Content-Security-Policy"
         content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
     <link rel="stylesheet" type="text/css" href="assets/main.css">
@@ -12,19 +12,13 @@
 
     <div id="main">
         <div class="indexContainer" id="workspacesContainer">
-            <div id="workspacesHeader">
-                <h1 id="workspaceTitle" class="mainTitle fade">WORKSPACES</h1>
-            </div> <!-- workspacesHeader -->
-            <p id="no_workspaces" class="mainTitle fade">Click here to manually add a Workspace</p>
-            <p class="mainTitle"><a target="" href="/delete-ws.html">Delete Workspaces</a></p>
-            <div id="new_workspace"></div>
             <ul id="workspaces">
-                
-           </ul> <!-- workspaces -->
+
+            </ul> <!-- workspaces -->
 
         </div> <!-- workspacesContainer -->
     </div>
-    <script src="assets/main.js" type="text/javascript"></script>
+    <script src="assets/del-ws.js" type="text/javascript"></script>
 </body>
 
 </html>
