Scrollbar modified, Custom Homepage Working

--- a/new-tab.html
+++ b/new-tab.html
@@ -13,9 +13,9 @@
     <div id="main">
         <div class="indexContainer" id="workspacesContainer">
             <div id="workspacesHeader">
-                <h1 id="workspaceTitle" class="mainTitle fade">WORKSPACES</h1>
+                <h1 id="workspaceTitle" class="mainTitle">WORKSPACE MANAGER</h1>
             </div> <!-- workspacesHeader -->
-            <p id="no_workspaces" class="mainTitle fade">Click here to manually add a Workspace</p>
+            <p id="no_workspaces" class="mainTitle"><u>Click here to manually add a Workspace</u></p>
             <p class="mainTitle"><a target="" href="/delete-ws.html">Delete Workspaces</a></p>
             <div id="new_workspace" style="display: none;">
                 <br><input style="width: 400px;" type="text" id="ws_title" placeholder="Workspace Name" /><br>
