Styled delete workspace page, resolved http-less manual workspace bug

--- a/delete-ws.html
+++ b/delete-ws.html
@@ -12,6 +12,7 @@
 
     <div id="main">
         <div class="indexContainer" id="workspacesContainer">
+            <h2 style="text-align: center; color: #0dbab1;">Click on the Workspace to delete it. Remember, the action is permanent and irreversible.</h2>
             <ul id="workspaces">
 
             </ul> <!-- workspaces -->
